[metadata]
name = zenroom
description = Python wrapper for the Zenroom virtual machine
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Sam Mulube
maintainer_email = sam@thingful.net
author = Puria Nafisi Azizi
author_email = puria@dyne.org
url = https://zenroom.org
project_urls =
    Source Code = https://github.com/DECODEproject/zenroom-py
    DECODE = https://decodeproject.eu
python_requires = >=3.6
license = AGPLv3
keywords =  zenroom crypto-language-processing virtual-machine blockchain crypto ecc dyne ecdh ecdsa zero-knowledge-proofs javascript npm ecp2 miller-loop hamming-distance elgamal aes-gcm aead seccomp goldilocks
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Affero General Public License v3
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Security

[options]
packages = find:
setup_requires =
    pytest-runner
tests_require =
    pytest
    pytest-cov
    codecov

[options.package_data]
zenroom = libs/Linux/**/**, libs/Darwin/**/**

[options.extras_require]
publish =
    pre-commit
    twine

[aliases]
test=pytest

[tool:pytest]
addopts = --cov=zenroom --cov-report term-missing -x

[flake8]
ignore = E501
max-line-length = 99
